# Pando-Mesh

./: .gitignore  env.example  pyproject.toml  run.bat  run.ps1  start.py
app/: __init__.py  main.py  utils.py
app/common/: __init__.py
app/config/: paths.py  settings.py
app/graph/: __init__.py  agent_bridge.py  cli_executor.py  cli_history.py  execution_pause.py  expand_planner.py  graph_expand.py  graph_parse.py  judge.py  langraph_executor.py  node_config.py  plan_graph.py
app/llms/: __init__.py  fallback.py
app/maas/: __init__.py  fallback.py
app/plan/: __init__.py  planning.py
app/register/: __init__.py  api.py  executor_config.py  models.py  registry.py  seed.py  service.py  store.py  types.py
app/runtime/: __init__.py  abort.py  context.py  message.py
app/session/: __init__.py  api.py  node_doc.py  plan_mode.py  requirements.py  session_plan.py  subject_schema.py  template_store.py  workflow_service.py  workflow_store.py  workspace_ref.py
app/third_agent/: __init__.py
app/workspace/: refs.py  (+9 more)
data/: _wf_graph.json
scripts/: free-port.ps1
tests/: test_cli_executor.py  test_cli_task_placeholders.py  test_expand_planner.py  test_features.py  test_graph_expand.py  test_judge.py  test_langraph_state.py  test_models_config.py  test_node_doc.py  test_node_phase.py  test_node_role.py  test_planning_llm.py  test_requirement_index.py  test_requirements.py  test_revise_node.py  test_session_plan.py  test_subject_schema.py  test_workflow_template.py  test_workspace_ref.py
web/: env.example  index.html  package-lock.json  package.json  vite.config.js
(+109 files in other folders)
