[tool.poetry]
name = "Pando-Mesh"
version = "0.1.0"
description = "产 Agent 的 Mesh 层：多 Agent 注册、Workflow 编排与调度"
authors = ["Pando Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.116.0,<0.117.0"
uvicorn = ">=0.23.0,<0.24.0"
pydantic = ">=2.9.0,<2.10.0"
pydantic-settings = ">=2.10.0,<2.11.0"
aiosqlite = ">=0.20.0,<0.22.0"
langgraph = ">=0.2.60,<0.4"
langgraph-checkpoint-sqlite = ">=2.0.0,<3.0.0"
openai = ">=1.40.0,<2.0.0"
jinja2 = ">=3.1.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<10.0.0"
pytest-asyncio = ">=0.24.0,<1.0.0"
httpx = ">=0.27.0,<0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
